--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
 </head>
 <body>
     
-    <div class="maincontainer">
-        <header></header>
-        <Nav></Nav>
+   
+    <header>
+            <h1>My Assignment</h1>
+            <Nav>
+                <ul>
+                    <a href="http://"></a>
+                    <a href="http://"></a>
+                    <a href="http://"></a>
+                </ul>
+            </Nav>  
+            <a href="http://login"></a> 
+    </header>
+
+
+    <div class="maincontainer"> 
         <section></section>
         <article></article>
         <Aside></Aside>
-
-        <footer></footer>
     </div>
+    <footer></footer>
+    
     <!-- Containers Header, Footer, Nav, Section, Article, Aside Lists Ordered, Unordered Text Span,
     Paragraph Images Headings Links Form -->
-
-
 
 
 </body>
