--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     </header>
 
     <main>
-        <h2 id="mainHead">Assigment container</h2>
+        <h2 id="mainHead">Halloween By Rosita for Assigment</h2>
         <div id="artZone">
             <div id="section">
-                <p>It´s contains random text I just wronte so I will change it later.</p>
-                <p>This is just a p-element inside a span</p>
-                <img src="Image/allison-saeng.jpg" alt="Image" style="width:42px;height:42px;">
+                <p>Create some Halloween beqause of my children that loves it.</p>
+                <p>Please enjoy this collection of great stories, featuring ghosts, ghouls, vampires and other supernatural phenomena.
+                These stories and poems are a fun and entertaining way to get in the mood for Halloween. For more, visit Gothic, Ghost,
+                Horror & Weird Library. You may also enjoy Mystery Stories. Especially for young children, we offer Halloween Stories
+                for Children</p><br><br><br><br>
+                <img src="Image/allison-saeng.jpg" alt="Image" style="width:262px;height:250px;">
             </div>
             <div id="article">
                 <article>
@@ -67,25 +70,25 @@
     <aside id="aside">
         <h1>Assigment container in aside</h1>
         <ul>
-            <li>Thailand
+            <li>Mexico
                 <ol>
-                    <li>Chiang Rai</li>
-                    <li>Bangkok</li>
-                    <li>Chiang Mai</li>
+                    <li>Iztapalapa</li>
+                    <li>Ecatepec</li>
+                    <li>Guadalajara</li>
                 </ol>
             </li>
-            <li>Soumi
+            <li>Irland
                 <ol>
-                    <li>Ivalo</li>
-                    <li>Rovaniemi</li>
-                    <li>Torneå</li>
+                    <li>Dublin</li>
+                    <li>Rundstone</li>
+                    <li>Adare</li>
                 </ol>
             </li>
-            <li>Australia
+            <li>Scotland
                 <ol>
-                    <li>Sydney</li>
-                    <li>Melbourne</li>
-                    <li>Queensland</li>
+                    <li>Edinburgh</li>
+                    <li>Glasgow</li>
+                    <li>Perth</li>
                 </ol>
             </li>
         </ul>
