some more changes

--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-        <header>
+        <header class="header">
             <h3 id="logo"><img class="resize" src="/Image/skull.png" />My Assignment</h3>
             <nav id="navbar">
                 <ul>
