--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h3 id="logo"><img class="resize" src="/Image/skull.png" />My Assignment</h3>
         <nav id="navbar">
             <ul>
@@ -28,7 +28,7 @@
         <div id="artZone">
             <div id="section">
                 <p>Create some Halloween beqause of my children that loves it.</p>
-                <p>Please enjoy this collection of great stories, featuring ghosts, ghouls, vampires and other supernatural phenomena.
+                <p class="parag2">Please enjoy this collection of great stories, featuring ghosts, ghouls, vampires and other supernatural phenomena.
                 These stories and poems are a fun and entertaining way to get in the mood for Halloween. For more, visit Gothic, Ghost,
                 Horror & Weird Library. You may also enjoy Mystery Stories. Especially for young children, we offer Halloween Stories
                 for Children</p><br><br><br><br>
